@startuml

title __POST's Class Diagram__\n

  namespace com.example.bbs {
    namespace ui.post {
      class com.example.bbs.ui.post.PostFragment {
          - AddPost : Button
          - root : View
          + addPost()
          {static} + getNowTime()
          + onCreateView()
      }
    }
  }
  

  namespace com.example.bbs {
    namespace ui.post {
      class com.example.bbs.ui.post.PostSqliteOpenHelper {
          {static} - mInstance : SQLiteOpenHelper
          {static} + getMInstance()
          + onCreate()
          + onUpgrade()
          - PostSqliteOpenHelper()
      }
    }
  }
  

  com.example.bbs.ui.post.PostFragment -up-|> androidx.fragment.app.Fragment
  com.example.bbs.ui.post.PostFragment o-- com.example.bbs.ui.login.User : user
  com.example.bbs.ui.post.PostSqliteOpenHelper -up-|> android.database.sqlite.SQLiteOpenHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
